[tool.poetry]
name = "iago"
version = "0.1.0"
description = ""
authors = ["Lorenzo Coacci <lorenzo@coacci.it>"]

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.0.5"
playsound = "^1.2.2"
termcolor = "^1.1.0"
SpeechRecognition = "^3.8.1"
pyttsx3 = "^2.90"

[tool.poetry.dev-dependencies]
pytest = "^3.7"
